# NuclearFissionSimulator

./: .travis.yml  CMakeLists.txt  README.md  fission_gen.cpp  fission_gen.h  fission_simulator.cpp  isotopes.csv  yields.h
src/main/: fission_simulator.cpp
src/models/: fission_gen.cpp  fission_gen.h  periodictable.cpp  periodictable.h
utils/: python_generator.cpp  python_generator.h  random_gen.cpp  random_gen.h
